--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Bank Finder Api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "node app.test.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,8 @@
   "devDependencies": {
     "got": "^11.8.2",
     "nodemon": "^2.0.12",
+    "pino-pretty": "^6.0.0",
+    "tap": "^15.0.9",
     "tape": "^5.3.1"
   }
 }
